# edo

./: .gitignore  Cargo.toml  README.md  deny.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/cmd/: checkout.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/environment/: container.rs  local.rs  mod.rs
crates/core/src/source/: git.rs  local.rs  mod.rs  oci.rs  remote.rs
crates/core/src/transform/: cargo_vendor.rs  compose.rs  go_vendor.rs  import.rs  script.rs
crates/edo/: Cargo.toml
crates/edo-core/: Cargo.toml
crates/edo-core/src/: lib.rs
crates/edo-core/src/context/: address.rs  builder.rs  config.rs  error.rs  handle.rs  lock.rs  log.rs  logmgr.rs  mod.rs  node.rs  starlark.rs
crates/edo-core/src/environment/: command.rs  error.rs  farm.rs  mod.rs
crates/edo-core/src/plugin/: bindings.rs  environment.rs  error.rs  host.rs  log.rs  mod.rs  node.rs  source.rs  storage.rs  transform.rs
crates/edo-core/src/scheduler/: execute.rs
crates/edo-core/src/source/: error.rs  mod.rs  require.rs  resolver.rs  vendor.rs
crates/edo-core/src/std/: mod.rs
crates/edo-core/src/storage/: artifact.rs  backend.rs  mod.rs
crates/edo-core/src/transform/: mod.rs
crates/edo-core/src/util/: command.rs  handle.rs  mod.rs  reader.rs  sync.rs
crates/edo-oci/: Cargo.toml
crates/edo-oci/src/: image.rs  index.rs  layer.rs  lib.rs  registry.rs
crates/edo-plugin-sdk/: Cargo.toml
crates/edo-plugin-sdk/src/: bindings.rs  error.rs  lib.rs  stub.rs
crates/edo-starlark/: Cargo.toml
crates/edo-wit/: abi.wit  edo.wit  host.wit
crates/edo/src/: main.rs
crates/edo/src/cmd/: checkout.rs  mod.rs  run.rs
crates/edo/src/console/: render.rs
crates/edo/src/context/: builder.rs  error.rs  logmgr.rs  mod.rs  schema.rs
crates/edo/src/environment/: mod.rs  vfs.rs
crates/edo/src/scheduler/: error.rs  (+2 more)
crates/plugins/edo-core-plugin/: Cargo.toml
crates/plugins/edo-core-plugin/src/: lib.rs
crates/plugins/edo-core-plugin/src/environment/: container.rs  local.rs
crates/plugins/edo-core-plugin/src/source/: git.rs  local.rs  oci.rs  remote.rs  vendor.rs
crates/plugins/edo-core-plugin/src/storage/s3/: error.rs  mod.rs
crates/plugins/edo-core-plugin/src/transform/: compose.rs  import.rs  mod.rs  script.rs
docs/: design.md  requirements.md
docs/components/: environment.md  plugin.md  source.md  storage.md  transform.md
examples/: README.md  build.edo  edo.lock.json
examples/hello_oci/: build.edo
examples/hello_rust/: Cargo.toml  build.edo
tests/net_fixtures/go_src/: edo.toml  go.mod
tests/net_fixtures/net_remote/: edo.toml
tests/net_fixtures/rust_src/: edo.toml
tests/src/common/: catalog.rs
(+34 files in other folders)
