[package]
name = "edo-oci"
version = "0.1.0"
edition = "2021"
authors = ["Jarrett Tierney <jmt@amazon.com>"]
repository = "https://github.com/awslabs/edo"
license = "MIT OR Apache-2.0"
keywords = ["edo"]

[dependencies]
astral-tokio-tar      = { workspace = true }
async-compression     = { workspace = true }
async-recursion       = { workspace = true }
async-trait           = { workspace = true }
aws-config            = { workspace = true }
aws-credential-types  = { workspace = true }
aws-sdk-ecr           = { workspace = true }
aws-sdk-ecrpublic     = { workspace = true }
base16                = { workspace = true }
base64                = { workspace = true }
bytes                 = { workspace = true }
chrono                = { workspace = true }
derive_builder        = { workspace = true }
futures               = { workspace = true }
indicatif             = { workspace = true }
home                  = { workspace = true }
keyring               = { workspace = true }
reqwest               = { workspace = true }
serde                 = { workspace = true }
serde_json            = { workspace = true }
sha2                  = { workspace = true }
snafu                 = { workspace = true }
tempfile              = { workspace = true }
tokio                 = { workspace = true }
tokio-util            = { workspace = true }
tracing               = { workspace = true }
url                   = { workspace = true }
